--- a/resources/vta_facturas.ui
+++ b/resources/vta_facturas.ui
@@ -497,7 +497,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
-                                                <property name="tooltip_text" translatable="yes">Crea un documento nuevo.</property>
+                                                <property name="tooltip_text" translatable="yes">Nuevo registro.</property>
                                                 <property name="relief">none</property>
                                                 <child>
                                                   <object class="GtkImage" id="image7">
@@ -519,7 +519,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
-                                                <property name="tooltip_text" translatable="yes">Guarda los datos</property>
+                                                <property name="tooltip_text" translatable="yes">Modificar los datos seleccionados</property>
                                                 <property name="relief">none</property>
                                                 <property name="use_underline">True</property>
                                                 <child>
